--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail">Two papers are accepted to NeurIPS 2023, congrats to Siyu，Mengxue, and Mengyu.
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ PAPER ]</div>
                         <div class="item-detail">We have eight accepted papers, including five ICCV 2023，two ACM MM 2023 and one TPAMI.
 
                         </div>
