--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">Two papers are accepted to NeurIPS 2023, congrats to Siyu，Mengxue, and Mengyu.
+                        <div class="item-detail">Three papers are accepted to NeurIPS 2023, congrats to Siyu, Mengxue, and Mengyu.
 
                         </div>
                     </li>
