--- a/publication.html
+++ b/publication.html
@@ -96,6 +96,14 @@
         <ol>
             <li>
                 <strong>
+                    Understanding and Accelerating Neural Architecture Search with Training-Free and Theory-Grounded Metrics
+                </strong> <br>
+                Wuyang Chen, Xinyu Gong, Junru Wu, <strong>Yunchao Wei</strong>, Humphrey Shi, Zhicheng Yan, Yi Yang, Zhangyang Wang<br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2023
+               <br>
+            </li>
+            <li>
+                <strong>
                     Entity-Graph Enhanced Cross-Modal Pretraining for Instance-level Product Retrieval
                 </strong> <br>
                 Xiao Dong, Xunlin Zhan, <strong>Yunchao Wei</strong>, Xiaoyong Wei, Yaowei Wang, Minlong Lu, Xiaochun Cao, Xiaodan Liang<br>
