Welcome new members

--- a/people.html
+++ b/people.html
@@ -97,18 +97,6 @@
                     <p>(2021, co-supervised stu @ UTS)</p>
                 </div>
             </div>
-
-            <div class="col-md-3 team-grids">
-                <div class="team-img">
-                    <img class="student-img" src="images/people/shiyin.jpg" alt="">
-                    <h4>Shiyin Zhang</h4>
-                    <p>(2017, co-supervised stu)</p>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/kunyang.png" alt="">
@@ -116,6 +104,10 @@
                     <p>(2022, co-supervised stu)</p>
                 </div>
             </div>
+        </div>
+
+
+        <div class="row">
 
             <div class="col-md-3 team-grids">
                 <div class="team-img">
@@ -140,9 +132,6 @@
                     <p>(2022, co-supervised stu)</p>
                 </div>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/yuyang_yin.jpg" alt="">
@@ -150,6 +139,9 @@
                     <p>(2023)</p>
                 </div>
             </div>
+        </div>
+
+        <div class="row">
 
             <div class="col-md-3 team-grids">
                 <div class="team-img">
@@ -172,6 +164,24 @@
                     <img class="student-img" src="images/people/siyu.jpg" alt="">
                     <h4>Siyu Jiao</h4>
                     <p>(2021, co-supervised stu)</p>
+                </div>
+            </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/yuyao_huang.jpg" alt="">
+                    <h4>Yuyao Huang</h4>
+                    <p>(2024)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/longfei_li.jpg" alt="">
+                    <h4>Longfei Li</h4>
+                    <p>(2024)</p>
                 </div>
             </div>
         </div>
@@ -198,7 +208,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 team-grids">
+            <div class="col-md-3 team-grids">   
                 <div class="team-img">
                     <img class="student-img" src="images/people/zilin.jpeg" alt="">
                     <h4>Zilin Wang</h4>
@@ -258,8 +268,6 @@
         </div>
 
         <div class="row">
-       
-
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/wenxin_chen.jpg" alt="">
@@ -292,13 +300,75 @@
             </div>
         </div>
 
- 
+        <div class="row">
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/chengqing_bu.png" alt="">
+                    <h4>Chengqing Bu</h4>
+                    <p>(2024)</p>
+                </div>
+            </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/jialong_sun.jpg" alt="">
+                    <h4>Jialong Sun</h4>
+                    <p>(2024)</p>
+                </div>
+            </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/junnan_liu.png" alt="">
+                    <h4>Junnan Liu</h4>
+                    <p>(2024)</p>
+                </div>
+            </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/weizhe_liu.jpg" alt="">
+                    <h4>Weizhe Liu</h4>
+                    <p>(2024)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/xiao_yu.jpg" alt="">
+                    <h4>Xiao Yu</h4>
+                    <p>(2024)</p>
+                </div>
+            </div>
+        </div>
 
         <div class="clearfix"></div>
 
     </div>
 
-    <h4 class="title">Undergraduate Students</h4>
+
+    <h4 class="title">Alumni</h4>
+    <div class="team-row">
+        <div class="row">
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/shiyin.jpg" alt="">
+                    <h4>Shiyin Zhang</h4>
+                    <p>Ph.D. 2017-2023</p>
+                    <p style="font-size: 12px;">Assistant Professor @ North China Electric Power University</p>
+                </div>
+            </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/kaiyuan_zhang.png" alt="">
+                    <h4>Kaiyuan Zhang</h4>
+                    <p>B.E. 2022-2023</p>
+                    <p style="font-size: 12px;">PhD Stu @ Tsinghua University</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <h4 class="title">Undergraduate Students</h4>
     <div class="contents" style="font-size: 16px;">
         <ul id="interests">
             <li>
@@ -314,7 +384,7 @@
                 <span class="name">Kaiyuan Zhang</span>, kaiyuan.zhang AT bjtu.edu.cn, Jan 2022 - present
             </li>
         </ul>
-    </div>
+    </div> -->
 
     <h4 class="title"></h4>
 </div>
