--- a/publication.html
+++ b/publication.html
@@ -96,6 +96,14 @@
         <ol>
             <li>
                 <strong>
+                    Scalable Video Object Segmentation with Identification Mechanism
+                </strong> <br>
+                Zongxin Yang, Jiaxu Miao, <strong>Yunchao Wei</strong>, Wenguan Wang, Xiaohan Wang, Yi Yang<br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2024
+               <br>
+            </li>
+            <li>
+                <strong>
                     Understanding and Accelerating Neural Architecture Search with Training-Free and Theory-Grounded Metrics
                 </strong> <br>
                 Wuyang Chen, Xinyu Gong, Junru Wu, <strong>Yunchao Wei</strong>, Humphrey Shi, Zhicheng Yan, Yi Yang, Zhangyang Wang<br>
@@ -241,7 +249,56 @@
 
         <h4 class="title"> Conference Proceedings </h4>
     
-         <h3 class="title subtitle"> 2023 </h3>
+        <h3 class="title subtitle"> 2024 </h3>
+        <ol>
+            <li>
+                <strong>Continuous Adaptation for Interactive Segmentation Using Teacher-Student Architecture</strong> <br>
+                Barsegh Atanyan, Levon Khachatryan, Shant Navasardyan, <strong>Yunchao Wei</strong>, Humphrey Shi<br>
+                Winter Conference on Applications of Computer Vision (<strong>WACV</strong>), 2024
+            </li>
+            <li>
+                <strong>Disentangled Pre-Training for Image Matting</strong> <br>
+                Yanda Li, Zilong Huang, Gang Yu, Ling Chen, <strong>Yunchao Wei</strong>, Jianbo Jiao<br>
+                Winter Conference on Applications of Computer Vision (<strong>WACV</strong>), 2024
+            </li>
+            <li>
+                <strong>VMFormer: End-to-End Video Matting With Transformer</strong> <br>
+                Jiachen Li, Vidit Goel, Marianna Ohanyan, Shant Navasardyan, <strong>Yunchao Wei</strong>, Humphrey Shi<br>
+                Winter Conference on Applications of Computer Vision (<strong>WACV</strong>), 2024
+            </li>
+            <li>
+                <strong>Transferable and Principled Efficiency for Open-Vocabulary Segmentation</strong> <br>
+                Jingxuan Xu, Wuyang Chen, Yao Zhao, <strong>Yunchao Wei</strong> <br>
+                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>Rethinking the Up-Sampling Operations in CNN-based Generative Network for Generalizable Deepfake Detection</strong> <br>
+                Chuangchuang Tan, Huan Liu, Yao Zhao, Shikui Wei, Guanghua Gu, Ping Liu, <strong>Yunchao Wei</strong><br>
+                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>PixelLM: Pixel Reasoning with Large Multimodal Model</strong> <br>
+                Zhongwei Ren, Zhicheng Huang, <strong>Yunchao Wei</strong>, Yao Zhao, Dongmei Fu, Jiashi Feng, Xiaojie Jin<br>
+                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>Frozen CLIP: A Strong Backbone for Weakly Supervised Semantic Segmentation</strong> <br>
+                Bingfeng Zhang, Siyue Yu, <strong>Yunchao Wei</strong>, Yao Zhao, Jimin Xiao<br>
+                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>Forgery-aware Adaptive Transformer for Generalizable Synthetic Image Detection</strong> <br>
+                Huan Liu, Zichang Tan, Chuangchuang Tan, <strong>Yunchao Wei</strong>, Jingdong Wang, Yao Zhao<br>
+                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <!-- <li>
+                <strong>Placeholder</strong> <br>
+                Chuangchuang Tan<br>
+                Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2024
+            </li> -->
+        </ol>
+
+        <h3 class="title subtitle"> 2023 </h3>
         <ol>
             <li>
                 <strong>SegRefiner: Towards Model-Agnostic Segmentation Refinement with Discrete Diffusion Process</strong> <br>
