update AAAI pulication

--- a/publication.html
+++ b/publication.html
@@ -291,11 +291,11 @@
                 Huan Liu, Zichang Tan, Chuangchuang Tan, <strong>Yunchao Wei</strong>, Jingdong Wang, Yao Zhao<br>
                 Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
             </li>
-            <!-- <li>
-                <strong>Placeholder</strong> <br>
-                Chuangchuang Tan<br>
+            <li>
+                <strong>Frequency-Aware Deepfake Detection: Improving Generalizability through Frequency Space Learning</strong> <br>
+                Chuangchuang Tan, Yao Zhao, Shikui Wei, Guanghua Gu, Ping Liu, <strong>Yunchao Wei</strong><br>
                 Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2024
-            </li> -->
+            </li>
         </ol>
 
         <h3 class="title subtitle"> 2023 </h3>
