--- a/publication.html
+++ b/publication.html
@@ -252,6 +252,71 @@
         <h3 class="title subtitle"> 2024 </h3>
         <ol>
             <li>
+                <strong>DreamLCM: Towards High Quality Text-to-3D Generation Via Latent Consistency Model</strong> <br>              
+                Yiming Zhong, Xiaolin Zhang, Yao Zhao, <strong>Yunchao Wei</strong> <br>
+                ACM Multimedia (<strong>MM</strong>), 2024<br>
+            </li>
+            <li>
+                <strong>One-shot In-context Part Segmentation</strong> <br>              
+                Zhenqi Dai, Ting Liu, Xingxing Zhang, <strong>Yunchao Wei</strong>, Yanning Zhang <br>
+                ACM Multimedia (<strong>MM</strong>), 2024<br>
+            </li>
+            <li>
+                <strong>Segment Anything with Precise Interaction</strong> <br>              
+                Liu Mengzhen, Mengyu Wang, Henghui Ding, Yilong Xu, Yao Zhao, <strong>Yunchao Wei</strong> <br>
+                ACM Multimedia (<strong>MM</strong>), 2024<br>
+            </li>
+            <li>
+                <strong>Collaborative Vision-Text Representation Optimizing for Open-Vocabulary Segmentation</strong><br/>
+                Siyu Jiao, Hongguang Zhu, Jiannan Huang, Yao Zhao, <strong>Yunchao Wei</strong>, Humphrey Shi<br/>
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2024
+            </li>
+            <li>
+                <strong>Region-Adaptive Transform with Segmentation Prior for Image Compression</strong><br/>
+                Yuxi Liu, Wenhan Yang, Huihui Bai, <strong>Yunchao Wei</strong>, Yao Zhao<br/>
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2024
+            </li>
+             <li>
+                <strong>Diffusion for Natural Image Matting</strong><br/>
+                Yihan Hu, Yiheng Lin, Wei Wang, Yao Zhao, <strong>Yunchao Wei</strong><br/>
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2024
+            </li>
+            <li>
+                <strong>Region-Native Visual Tokenization</strong><br/>
+                Mengyu Wang, Yuyao Huang, Henghui Ding, Xinlong Wang, Tiejun Huang, Yao Zhao, <strong>Yunchao Wei</strong>, Shuicheng Yan<br/> 
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2024
+            </li>
+            <li>
+                <strong>Enhanced Visual Instruction Tuning with Synthesized Image-Dialogue Data</strong><br/>
+                Yanda Li, Chi Zhang, Gang Yu, Wanqi Yang, Zhibin Wang, Bin Fu, Guosheng Lin, Chunhua Shen, Ling Chen, <strong>Yunchao Wei</strong><br/> 
+                Association for Computational Linguistics Findings (<strong>ACL</strong>), 2024
+            </li>
+            <li>
+                <strong>Transferable and Principled Efficiency for Open-Vocabulary Segmentation</strong> <br>
+                Jingxuan Xu, Wuyang Chen, Yao Zhao, <strong>Yunchao Wei</strong> <br>
+                IEEE Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>Rethinking the Up-Sampling Operations in CNN-based Generative Network for Generalizable Deepfake Detection</strong> <br>
+                Chuangchuang Tan, Huan Liu, Yao Zhao, Shikui Wei, Guanghua Gu, Ping Liu, <strong>Yunchao Wei</strong><br>
+                IEEE Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>PixelLM: Pixel Reasoning with Large Multimodal Model</strong> <br>
+                Zhongwei Ren, Zhicheng Huang, <strong>Yunchao Wei</strong>, Yao Zhao, Dongmei Fu, Jiashi Feng, Xiaojie Jin<br>
+                IEEE Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>Frozen CLIP: A Strong Backbone for Weakly Supervised Semantic Segmentation</strong> <br>
+                Bingfeng Zhang, Siyue Yu, <strong>Yunchao Wei</strong>, Yao Zhao, Jimin Xiao<br>
+                IEEE Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
+                <strong>Forgery-aware Adaptive Transformer for Generalizable Synthetic Image Detection</strong> <br>
+                Huan Liu, Zichang Tan, Chuangchuang Tan, <strong>Yunchao Wei</strong>, Jingdong Wang, Yao Zhao<br>
+                IEEE Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
+            </li>
+            <li>
                 <strong>Continuous Adaptation for Interactive Segmentation Using Teacher-Student Architecture</strong> <br>
                 Barsegh Atanyan, Levon Khachatryan, Shant Navasardyan, <strong>Yunchao Wei</strong>, Humphrey Shi<br>
                 Winter Conference on Applications of Computer Vision (<strong>WACV</strong>), 2024
@@ -265,31 +330,6 @@
                 <strong>VMFormer: End-to-End Video Matting With Transformer</strong> <br>
                 Jiachen Li, Vidit Goel, Marianna Ohanyan, Shant Navasardyan, <strong>Yunchao Wei</strong>, Humphrey Shi<br>
                 Winter Conference on Applications of Computer Vision (<strong>WACV</strong>), 2024
-            </li>
-            <li>
-                <strong>Transferable and Principled Efficiency for Open-Vocabulary Segmentation</strong> <br>
-                Jingxuan Xu, Wuyang Chen, Yao Zhao, <strong>Yunchao Wei</strong> <br>
-                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
-            </li>
-            <li>
-                <strong>Rethinking the Up-Sampling Operations in CNN-based Generative Network for Generalizable Deepfake Detection</strong> <br>
-                Chuangchuang Tan, Huan Liu, Yao Zhao, Shikui Wei, Guanghua Gu, Ping Liu, <strong>Yunchao Wei</strong><br>
-                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
-            </li>
-            <li>
-                <strong>PixelLM: Pixel Reasoning with Large Multimodal Model</strong> <br>
-                Zhongwei Ren, Zhicheng Huang, <strong>Yunchao Wei</strong>, Yao Zhao, Dongmei Fu, Jiashi Feng, Xiaojie Jin<br>
-                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
-            </li>
-            <li>
-                <strong>Frozen CLIP: A Strong Backbone for Weakly Supervised Semantic Segmentation</strong> <br>
-                Bingfeng Zhang, Siyue Yu, <strong>Yunchao Wei</strong>, Yao Zhao, Jimin Xiao<br>
-                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
-            </li>
-            <li>
-                <strong>Forgery-aware Adaptive Transformer for Generalizable Synthetic Image Detection</strong> <br>
-                Huan Liu, Zichang Tan, Chuangchuang Tan, <strong>Yunchao Wei</strong>, Jingdong Wang, Yao Zhao<br>
-                Computer Vision and Pattern Recognition Conference (<strong>CVPR</strong>), 2024
             </li>
             <li>
                 <strong>Frequency-Aware Deepfake Detection: Improving Generalizability through Frequency Space Learning</strong> <br>
