--- a/publication.html
+++ b/publication.html
@@ -278,7 +278,7 @@
             </li>
              <li>
                 <strong>Diffusion for Natural Image Matting</strong><br/>
-                Yihan Hu, Yiheng Lin, Wei Wang, Yao Zhao, <strong>Yunchao Wei</strong><br/>
+                Yihan Hu, Yiheng Lin, Wei Wang, Yao Zhao, <strong>Yunchao Wei</strong>, Humphrey Shi<br/>
                 European Conference on Computer Vision (<strong>ECCV</strong>), 2024
             </li>
             <li>
