--- a/people.html
+++ b/people.html
@@ -339,7 +339,17 @@
                     <p>(2024)</p>
                 </div>
             </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/chao_ma.jpg" alt="">
+                    <h4>Chao Ma</h4>
+                    <p>(2024)</p>
+                </div>
+            </div>
         </div>
+
+        <!-- <div class="row">
+        </div> -->
 
         <div class="clearfix"></div>
 
