--- a/publication.html
+++ b/publication.html
@@ -248,9 +248,38 @@
         </ol>
 
         <h4 class="title"> Conference Proceedings </h4>
+
+        <h3 class="title subtitle"> 2025 </h3>
+         <ol>
+             <li>
+                <strong>Memory Efficient Matting with Adaptive Token Routing</strong> <br>
+                Yiheng Lin, Yihan Hu, Chenyi Zhang, Ting Liu, Xiaochao Qu, Luoqi Liu, Yao Zhao,  <strong>Yunchao Wei</strong><br>
+                Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2025
+            </li>
+             <li>
+                <strong>C2P-CLIP: Injecting Category Common Prompt in CLIP to Enhance Generalization in Deepfake Detection</strong> <br>
+                Chuangchuang Tan, Renshuai Tao, Huan Liu, Guanghua Gu, Baoyuan Wu, Yao Zhao, <strong>Yunchao Wei</strong><br>
+                Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2025
+            </li>
+             <li>
+                <strong>Attend and Enrich: Enhanced Visual Prompt for Zero-Shot Learning</strong> <br>
+                Man Liu, Huihui Bai, Feng Li, Chunjie Zhang,  <strong>Yunchao Wei</strong>, Tat-Seng Chua, Yao Zhao<br>
+                Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2025
+            </li>
+         </ol>
     
         <h3 class="title subtitle"> 2024 </h3>
         <ol>
+            <li>
+                <strong>Bridge the Points: Graph-based Few-shot Segment Anything Semantically</strong> <br>
+                Anqi Zhang, Guangyu Gao, Jianbo Jiao, Chi Harold Liu, <strong>Yunchao Wei</strong><br>
+                Neural Information Processing Systems (<strong>NeurIPS</strong>), 2024 (<span style="color:#CB4335;"><strong>spotlight</strong>)
+            </li>
+            <li>
+                <strong>Diffusion4D: Fast Spatial-temporal Consistent 4D generation via Video Diffusion Models</strong> <br>
+                Hanwen Liang, Yuyang Yin, Dejia Xu, hanxue liang, Zhangyang Wang, Konstantinos N Plataniotis, Yao Zhao, <strong>Yunchao Wei</strong><br>
+                Neural Information Processing Systems (<strong>NeurIPS</strong>), 2024
+            </li>
             <li>
                 <strong>DreamLCM: Towards High Quality Text-to-3D Generation Via Latent Consistency Model</strong> <br>              
                 Yiming Zhong, Xiaolin Zhang, Yao Zhao, <strong>Yunchao Wei</strong> <br>
@@ -263,13 +292,13 @@
             </li>
             <li>
                 <strong>Segment Anything with Precise Interaction</strong> <br>              
-                Liu Mengzhen, Mengyu Wang, Henghui Ding, Yilong Xu, Yao Zhao, <strong>Yunchao Wei</strong> <br>
-                ACM Multimedia (<strong>MM</strong>), 2024<br>
+                Mengzhen Liu, Mengyu Wang, Henghui Ding, Yilong Xu, Yao Zhao, <strong>Yunchao Wei</strong> <br>
+                ACM Multimedia (<strong>MM</strong>), 2024 (<span style="color:#CB4335;"><strong>oral</strong>)
             </li>
             <li>
                 <strong>Collaborative Vision-Text Representation Optimizing for Open-Vocabulary Segmentation</strong><br/>
                 Siyu Jiao, Hongguang Zhu, Jiannan Huang, Yao Zhao, <strong>Yunchao Wei</strong>, Humphrey Shi<br/>
-                European Conference on Computer Vision (<strong>ECCV</strong>), 2024
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2024 (<span style="color:#CB4335;"><strong>oral</strong>)
             </li>
             <li>
                 <strong>Region-Adaptive Transform with Segmentation Prior for Image Compression</strong><br/>
