--- a/people.html
+++ b/people.html
@@ -198,23 +198,7 @@
 
     <h4 class="title">M.S. Students</h4>
     <div class="team-row">
-        <div class="row">  
-
-            <div class="col-md-3 team-grids">
-                <div class="team-img">
-                    <img class="student-img" src="images/people/qiqi_gong.jpg" alt="">
-                    <h4>Qiqi Gong</h4>
-                    <p>(2021, co-supervised stu)</p>
-                </div>
-            </div>
-
-            <div class="col-md-3 team-grids">   
-                <div class="team-img">
-                    <img class="student-img" src="images/people/zilin.jpeg" alt="">
-                    <h4>Zilin Wang</h4>
-                    <p>(2021, co-supervised stu)</p>
-                </div>
-            </div>
+        <div class="row">
 
             <div class="col-md-3 team-grids">
                 <div class="team-img">
@@ -231,9 +215,6 @@
                     <p>(2022)</p>
                 </div>
             </div>
-        </div>      
-
-        <div class="row">
             
             <div class="col-md-3 team-grids">
                 <div class="team-img">
@@ -250,7 +231,9 @@
                     <p>(2022)</p>
                 </div>
             </div>
-            
+        </div>      
+
+        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/chenyi_zhang.jpg" alt="">
@@ -258,16 +241,6 @@
                     <p>(2022)</p>
                 </div>
             </div>
-            <div class="col-md-3 team-grids">
-                <div class="team-img">
-                    <img class="student-img" src="images/people/qian_yang.jpg" alt="">
-                    <h4>Qian Yang</h4>
-                    <p>(2022)</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/wenxin_chen.jpg" alt="">
@@ -291,6 +264,9 @@
                     <p>(2023)</p>
                 </div>
             </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/yiheng_lin.png" alt="">
@@ -298,9 +274,6 @@
                     <p>(2023, co-supervised stu)</p>
                 </div>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/weizhe_liu.jpg" alt="">
@@ -322,6 +295,9 @@
                     <p>(2024)</p>
                 </div>
             </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/junnan_liu.png" alt="">
@@ -329,9 +305,6 @@
                     <p>(2024)</p>
                 </div>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/xiao_yu.jpg" alt="">
@@ -351,13 +324,33 @@
         <!-- <div class="row">
         </div> -->
 
+        <!-- <div class="row">
+        </div> -->
+
         <div class="clearfix"></div>
 
     </div>
 
 
     <h4 class="title">Alumni</h4>
-    <div class="team-row">
+    <ul class="alumni">
+        <li>
+            <p><span style="color: black;">Shiyin Zhang.</span> Ph.D. 2017-2023. Assistant Professor @ North China Electric Power University.</p>
+        </li>
+        <li>
+            <p><span style="color: black;">Kaiyuan Zhang.</span> B.E. 2022-2023. PhD Stu @ Tsinghua University.</p>
+        </li>
+        <li>
+            <p><span style="color: black;">Qiqi Gong.</span> M.S. co-supervised stu, 2021-2024. Huawei.</p>
+        </li>
+        <li>
+            <p><span style="color: black;">Zilin Wang.</span> M.S. co-supervised stu, 2021-2024. Agricultural Development Bank of China.</p>
+        </li>
+        <li>
+            <p><span style="color: black;">Qian Yang.</span> M.S. 2022-2024. Beijing Telecom Planning & Designing Institute.</p>
+        </li>
+    </ul>
+    <!-- <div class="team-row">
         <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
@@ -376,7 +369,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- <h4 class="title">Undergraduate Students</h4>
     <div class="contents" style="font-size: 16px;">
