--- a/opening.html
+++ b/opening.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yunchao Wei's homepage</title>
+    <title>Guoliang Kang's homepage</title>
     <!-- Custom Theme files -->
     <link rel="icon" href="./images/BJTU_LOGO3.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,10 +80,7 @@
 
             <div class="contents">
                 <p>
-                    Our goal is to make the computer better perceive the real world like humans using computer vision and machine learning techniques.
-                    For <b>computer vision</b>, we are interested in developing accurate and efficient solutions for the basic recognition tasks, e.g., classification, object detection, pixel-level understanding (e.g., semantic segmentation, instance segmentation, class-agnostic segmentation, matting) for images/videos.
-                    For <b>machine learning</b>, we are interested in developing data-efficient algorithms for training models with imperfect or incomplete data, including unsupervised learning, weakly supervised learning, semi-supervised learning, few-shot learning, domain adaptive learning, active learning etc. 
-                    Recently, we are growingly interested in applying multi-modality pre-training techniques for tackling vision & language problems, e.g., cross-media retrieval, referring recognition, open-world recognition, etc.
+                    Our lab's research interests include computer vision, machine learning, and multi-modal learning.
                 </p>
             </div>
 
@@ -93,8 +90,8 @@
                 <p>
                     Thanks for your interest in joining my group! We always have openings for outstanding students. 
                     Interested candidates for Master/PhD opportunities are strongly encouraged to contact me by 
-                    <a href="mailto:yunchao.wei@bjtu.edu.cn">email</a>. Please attach your CV, and clearly discuss your research interests, 
-                    coding skills and English ability. Besides, we are alway open to working with outstanding <b>BJTU undergraduates</b>  
+                    <a href="mailto:guoliang_kang@buaa.edu.cn">email</a>. Please attach your CV, and clearly discuss your research interests, 
+                    coding skills and English ability. Besides, we are alway open to working with outstanding <b>BUAA undergraduates</b>  
                     for some research projects, and you are welcome to my office to have a discussion. We provide extraordinarily strong 
                     support to students for internship, visiting, collaboration, and networking opportunities. We encourage you to talk with current 
                    members in our group for more details. 
@@ -104,21 +101,7 @@
             <h4 class="title">About Me</h4>
             <div class="contents">
                 <p>
-                    Before joining BJTU, he was a Senior Lecturer of <a href="https://reler.net/">ReLER Lab</a> at the 
-                    University of Technology Sydney from 2019 to 2021. He was a Postdoctoral Researcher of 
-                    <a href="https://ifp-uiuc.github.io/">IFP group</a> at UIUC from 2017 to 2019, working with 
-                    Prof. <a href="https://en.wikipedia.org/wiki/Thomas_Huang">Thomas S. Huang</a>, and a Postdoctoral Researcher of National University of Singapore from 2016 to 2017, 
-                    working with Prof. <a href="https://sites.google.com/site/jshfeng/home">Jiashi Feng</a> and Prof. <a href="https://yanshuicheng.ai/">Shuicheng Yan</a>. He received his Ph.D. degree from Beijing Jiaotong University 
-                    in 2016, advised by Prof. <a href="http://mepro.bjtu.edu.cn/zhaoyao/index.htm">Yao Zhao</a>. He was selected as MIT TR35 China by MIT Technology Review in 2021 and was named as one of the five top early-career researchers in 
-                    Engineering and Computer Sciences in Australia by The Australian in 2020. He received the Discovery Early 
-                    Career Researcher Award of the Australian Research Council in 2019, the 1st Prize in Science and Technology 
-                    awarded by China Society of Image and Graphics (CSIG) in 2019. He has published more than 80 papers in top-tier 
-                    conferences/journals, Google citations 8700+. He received many competition prizes from CVPR/ICCV/ECCV,  such as the  
-                    Winner prizes of  ILSVRC 2014, LIP 2018/2019, Youtube VOS 2021, Runner-up Prizes of ILSVRC 2017, DAVIS 2020, etc. 
-                    He organized many workshops on top-tier conferences, including Learning from Imperfect Data Workshop series 
-                    (CVPR 2019, 2020, 2021) and Real-world Recognition from Low-quality Inputs Workshop series (ICCV 2019, ECCV 2020). 
-                    He has broad research interests in computer vision and machine learning. His current research interest focuses 
-                    on visual recognition with imperfect data, image/video segmentation and object detection, and multi-modal perception.
+                    About guoliang kang.
                 </p>
         </div>
     </div>
@@ -129,7 +112,7 @@
 <div class="footer">
     <div class="container">
         <div class="col-md-5 col-md-offset-2">
-            <p>Copyright &copy; 2021.Company name All rights reserved. </p>
+            <p>Copyright &copy; 2025.Company name All rights reserved. </p>
         </div>
         <div class="col-md-3">
             <script type="text/javascript"
