--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     const img = document.getElementById('cover');
 
     img.style.minHeight = (cof * width).toString() + "px";
-    img.style.background = "url(./images/BJTU_0.jpg) no-repeat center 0px";
+    img.style.background = "url(./images/buaa_0.jpg) no-repeat center 0px";
     img.style.backgroundSize = "cover";
 </script>
 
@@ -130,33 +130,28 @@
             <div class="team-row center-row">
                 <div class="col-md-3 team-grids">
                     <div class="team-img">
-                        <img class="teacher-img" src="images/people/wyc.jpg" alt="">
+                        <img class="teacher-img" src="images/people/kgl.jpg" alt="">
                         <!-- <h4>Yunchao Wei</h4> -->
                         <!-- <p>Professor</p> -->
                     </div>
                 </div>
                 <div class="col-md-9">
-                    <h3>Yunchao Wei 魏云超</h3>
+                    <h3>Guoliang Kang 康国梁</h3>
                     <br>
                     <p> 
-                        <!-- Professor<br/> -->
-                        Professor, <a href="http://mepro.bjtu.edu.cn/">Center of Digital Media Information Processing</a>
-                    <br>
-                    Institute of Information Science | Beijing Jiaotong University <br>
-
-                    <strong>Office:</strong> 1013-B08, Science & Technology Innovation Mansion of BJTU, Beijing 100044<br/>
-                    <strong>Email</strong>: yunchao.wei AT bjtu.edu.cn | wychao1987 AT gmail.com<br/>
+                    <!-- Professor<br/> -->
+                    Professor, <a href="http://shi.buaa.edu.cn/kangguoliang/zh_CN/index.htm">School of Automation Science and Electrical Engineering | Beihang University</a> <br>
+                    <strong>Office:</strong> New Main Building E2829, Beihang University, Beijing 100191<br/>
+                    <strong>Email</strong>: guoliang_kang@buaa.edu.cn<br/>
                     <strong>Prospective Students</strong> : <a href="opening.html">Contact me</a>. <br>
                     
-                    <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i
+                    <a href="https://scholar.google.com/citations?user=P24HCsgAAAAJ&hl=en" target="_blank"><i
                         class="fa fa-globe"></i> 
                         <img src="./images/google_scholar.png" alt="" height="20px">
                     </a>
-                    <a href="">
+                    <a href="https://github.com/kgl-prml">
                         <img src="./images/github.png" alt="" height="20px">
                     </a>
-                    <a href="https://www.youtube.com/channel/UCX6tsirfrt2W3vnDbKIy2Zw/videos">
-                        <img src="./images/youtube.png" alt="" height="20px">
                     </a>
                     </p>
                 </div>
@@ -170,17 +165,8 @@
             <div class="center-row" style="font-size: 16px;">
 
                 <p>
-                    My research interests include computer vision and machine learning. In particular, I have recently worked in:
+                    My research interests include deep learning, and its applications in various computer vision tasks, e.g. ... etc.
                 </p>
-
-                <ul id="interests">
-                    <li>
-                        Computer Vision: classification, object detection, segmentation, vision & language, etc.
-                    </li>
-                    <li>
-                        Machine Learning: unsupervised/weakly-supervised/semi-supervised learning, few-shot learning, domain adaptive learning, active learning, etc.
-                    </li>
-                </ul>
                 <p>
                     More details can be found <a href="opening.html">here</a>. 
                 </p>
@@ -196,90 +182,29 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">Three papers are accepted to NeurIPS 2023, congrats to Siyu, Mengxue, and Mengyu.
-
+                        <div class="item-detail">Two papers are accepted to ACMMM 2025, congrats to Huijie, Nanxing, and Shai.
                         </div>
                     </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
 
-                        <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">We have eight accepted papers, including five ICCV 2023，two ACM MM 2023 and one TPAMI.
-
-                        </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
+                    <!-- <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[SERVICE]</div>
                         <div class="item-detail">Will serve as Area Chairs for NeurIPS 2023 Track Datasets & Benchmarks and CVPR 2024.
-
                         </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">We have seven accepted papers, including one AAAI 2023, four CVPR 2023，one IJCV and one TPAMI.
-
-                        </div>
-                    </li>
-                     <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail"> The extension of <a href="https://github.com/shiyinzhang/Inside-Outside-Guidance">IOG</a> is accepted by TPAMI, congrats to Shiyin & Kunyang.
-
-                        </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail"> Two papers are accepted to NeurIPS 2022, congrats to Siyu & Gengwei, and Zekang.
-
-                        </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail"> Three papers are accepted to ECCV 2022, congrats to Feng, Kunyang and Mengxue.
-
-                        </div>
-                    </li>
+                    </li> -->
+<!--  
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ DATASET ]</div>
                         <div class="item-detail"> We release <a href="https://github.com/VIPSeg-Dataset/VIPSeg-Dataset">VIPSeg</a>, the first large-scale dataset for <strong>VI</strong>deo <strong>P</strong>anoptic <strong>Seg</strong>mentation.
 
                         </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
+                    </li> -->
 
-                        <div class="item-title">[ DATASET ]</div>
-                        <div class="item-detail"> We release <a href="https://xiaodongsuper.github.io/M5Product_dataset/">M5Product</a>, a large-scale multi-modal pre-training dataset with 5 modalities.
-
-                        </div>
-                    </li>
-                     <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail"> Three papers are accepted to CVPR 2022, congrats to Jiaxu, Xiao and Pengtao.
-
-                        </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ AWARD ]</div>
-                        <div class="item-detail"> I was selected as MIT TR35 - MIT Technology Review, 35 Innovators Under 35, China.
-
-                        </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail"> Our work on video object segmentation (<a href="https://arxiv.org/abs/2106.02638">AOT</a>) and few-shot segmentation (<a href="https://arxiv.org/abs/2106.02320">CyCTR</a>) are accepted to NeurIPS 2021. Congrats Zongxin and Gengwei!
-                        </div>
-                    </li>
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ TEAM ]</div>
-                        <div class="item-detail"> I joined Beijing Jiaotong University as a full professor on Aug 2021!
+                        <div class="item-detail"> I joined Beihang University as a full professor on Aug 2022!
                         </div>
                     </li>
                 </ul>
@@ -296,40 +221,9 @@
 
                 <ul id="interests">
                     <li>
-                        MIT TR35 China by MIT Technology Review (2021)
-                    </li>
-                    <li>
-                        The 1st place of the video object segmentation track in CVPR Youtube VOS Challenge (2021)
-                    </li>
-                    <li>
-                        Early Career Researcher Award (Honorable Mention) by Australian Pattern Recognition Society (2020)
-                    </li>
-                    <li>
-                        Top 40 early-career researchers in Australia by The Australian (2020)
-                    </li>
-                    <li>
-                        The 2nd place of the video object segmentation track in CVPR DAVIS Challenge (2020)
-                    </li>
-                    <li>
-                        The 1st prize in science and technology awarded by China Society of Image and Graphics (2019)
-                    </li>
-                    <li>
-                        Early Career Researcher Award (DECRA) by Australian Research Council (2019)
-                    </li>
-                    <li>
-                        The 1st place of human parsing tracks in the 2nd CVPR Look Into Person Challenge (2018)
-                    </li>
-                    <li>
-                        The 2nd place of video object detection/tracking tracks in ImageNet Challenge (2017)
-                    </li>
-                    <li>
-                        Excellent Doctoral Dissertation Award of CIE (2016)
-                    </li>
-                    <li>
-                        The 1st place of object detection track in ImageNet Challenge (2014)
+                        to be updated...
                     </li>
                 </ul>
-
             </div>
         </div>
     </div>
