--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yunchao Wei's homepage</title>
+    <title>CLEAR-BUAA's homepage</title>
     <!-- Custom Theme files -->
-    <link rel="icon" href="./images/BJTU_LOGO3.png">
+    <link rel="icon" href="./images/buaa_0.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
@@ -59,7 +59,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header navbar-left">
-                <h1><a href="index.html"><img style="width: 30rem" src="images/wei_logo.jpeg"/></a></h1>
+                <h1><a href="index.html"><img style="width: 30rem" src="images/buaa_0.png"/></a></h1>
             </div>
             <!--navigation-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -130,7 +130,7 @@
             <div class="team-row center-row">
                 <div class="col-md-3 team-grids">
                     <div class="team-img">
-                        <img class="teacher-img" src="images/people/kgl.jpg" alt="">
+                        <img class="teacher-img" src="images/people/kgl.png" alt="">
                         <!-- <h4>Yunchao Wei</h4> -->
                         <!-- <p>Professor</p> -->
                     </div>
@@ -278,3 +278,4 @@
 </div>
 </body>
 </html>
+
