--- a/people.html
+++ b/people.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yunchao Wei's homepage</title>
+    <title>CLEAR-BUAA's homepage</title>
     <!-- Custom Theme files -->
-    <link rel="icon" href="./images/BJTU_LOGO3.png">
+    <link rel="icon" href="./images/buaa_0.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
@@ -177,4 +177,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/bootstrap.js"></script>
 </body>
+
 </html>
