--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <img src="./images/BJTU_0.jpg" alt="">
 </div> -->
 
-<script>
+<!-- <script>
     // const cof = 880 / 1792;
     const width = window.innerWidth;
     const img = document.getElementById('cover');
@@ -118,7 +118,10 @@
     img.style.minHeight = (cof * width).toString() + "px";
     img.style.background = "url(./images/buaa_0.jpg) no-repeat center 0px";
     img.style.backgroundSize = "cover";
-</script>
+</script> -->
+<div id="cover">
+  <img src="./images/buaa_0.jpg" alt="cover image" />
+</div>
 
 
 <!--research interests-->
@@ -278,4 +281,5 @@
 </div>
 </body>
 </html>
+
 
