--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     img.style.background = "url(./images/buaa_0.jpg) no-repeat center 0px";
     img.style.backgroundSize = "cover";
 </script> -->
-<div id="cover">
+<!-- <div id="cover">
   <img src="./images/buaa_0.jpg" alt="cover image" />
-</div>
+</div> -->
 
 
 <!--research interests-->
@@ -281,5 +281,6 @@
 </div>
 </body>
 </html>
+
 
 
