--- a/publication.html
+++ b/publication.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header navbar-left">
-                <h1><a href="index.html"><img style="width: 30rem" src="images/wei_logo.jpeg"/></a></h1>
+                <h1><a href="index.html"><img style="width: 30rem" src="images/buaa_0.png"/></a></h1>
             </div>
             <!--navigation-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -163,4 +163,5 @@
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
 
