--- a/seminar.html
+++ b/seminar.html
@@ -112,7 +112,7 @@
                         <tr>
                             <td>Jun. 18</td>
                             <td>Shuai Ma <br> Nanxing Hu </td>
-                            <td>BJTU</td>
+                            <td>BUAA</td>
                             <td>
                                 How to make a website?
                                 [<a href="./seminar/vanillanet_jialong_6_25.pdf">pdf</a>] <br>
