--- a/opening.html
+++ b/opening.html
@@ -3,7 +3,7 @@
 <head>
     <title>CLEAR-BUAA's homepage</title>
     <!-- Custom Theme files -->
-    <link rel="icon" href="./images/buaa_0.png">
+    <link rel="icon" href="./images/label_logo_only.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header navbar-left">
-                <h1><a href="index.html"><img style="width: 30rem" src="images/buaa_0.png"/></a></h1>
+                <h1><a href="index.html"><img style="width: 30rem" src="images/lab_logo.png"/></a></h1>
             </div>
             <!--navigation-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
